<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">大胖的厨房</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="err_fatal">程序错误</string>
	<string name="confirm">确认</string>
	<string name="waterfall_tail">加载中，请稍候</string>
	<string name="title_shopping_cart">购物车</string>
	<string name="btn_edit">编辑</string>
	<string name="btn_to_shopping">去逛逛</string>
	<string name="text_select_all">" 全选"</string>
	<string name="btn_to_settle">确定点餐</string>
	<string name="btn_scancode">扫描二维码</string>
	<string name="btn_delete">删除</string>
	
	
	<string name="capture_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
	<string name="capture_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
	<string name="capture_button_ok">OK</string>
	
	<string name="preferences_actions_title">When a barcode is found\u2026</string>
	<string name="preferences_auto_focus_title">Use auto focus</string>
	<string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
	<string name="preferences_bulk_mode_title">Bulk scan mode</string>
	<string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
	<string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
	<string name="preferences_custom_product_search_title">Custom search URL</string>
	<string name="preferences_decode_1D_title">1D barcodes</string>
	<string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
	<string name="preferences_decode_QR_title">QR Codes</string>
	<string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
	<string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
	<string name="preferences_disable_continuous_focus_title">No continuous focus</string>
	<string name="preferences_disable_exposure_title">No exposure</string>
	<string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
	<string name="preferences_front_light_title">Use front light</string>
	<string name="preferences_general_title">General settings</string>
	<string name="preferences_name">Settings</string>
	<string name="preferences_play_beep_title">Beep</string>
	<string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
	<string name="preferences_remember_duplicates_title">Remember duplicates</string>
	<string name="preferences_result_title">Result settings</string>
	<string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
	<string name="preferences_search_country">Search country</string>
	<string name="preferences_try_bsplus">Try Barcode Scanner+</string>
	<string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
	<string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
	<string name="preferences_supplemental_title">Retrieve more info</string>
	<string name="preferences_vibrate_title">Vibrate</string>
	
	  <string name="button_add_calendar">Add to calendar</string>
  <string name="button_add_contact">Add contact</string>
  <string name="button_back">Back</string>
  <string name="button_book_search">Book Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_dial">Dial number</string>
  <string name="button_done">Done</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="button_google_shopper">Shopper</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product Search</string>
  <string name="button_search_book_contents">Search contents</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="button_wifi">Connect to Network</string>
  
    <string name="result_address_book">Found contact info</string>
  <string name="result_calendar">Found calendar event</string>
  <string name="result_email_address">Found email address</string>
  <string name="result_geo">Found geographic coordinates</string>
  <string name="result_isbn">Found book</string>
  <string name="result_product">Found product</string>
  <string name="result_sms">Found SMS address</string>
  <string name="result_tel">Found phone number</string>
  <string name="result_text">Found plain text</string>
  <string name="result_uri">Found URL</string>
  <string name="result_wifi">Found WLAN Configuration</string>
</resources>
